7 September 2004 Sylvain Pion
- Make some types public in Filtered_kernel (FK, EK, C2E, C2F).

6 September 2004 Menelaos Karavelas & Sylvain Pion
- added missing "#include<CGAL/basic.h>" in some testsuite files

1 September 2004 Sylvain Pion
- test/Static_filters.C : dump the random generator seed to be able to
  reproduce bugs.

1 September 2004 Menelaos Karavelas
- added the following tags in number type traits: Has_exact_sqrt,
  Has_exact_ring_operations, Has_exact_division

21 August 2004 Sylvain Pion
- Undo last change.

20 August 2004 Menelaos Karavelas
- first attempt towards the new number type traits

4 August 2004 Sylvain Pion
- Add CGAL_NO_STATIC_FILTERS.

23 July 2004 Sylvain Pion
- IA64 porting.

24 June 2004 Sylvain Pion
- Use CGAL::Random instead of drand48 in test/Static_filters.C.

23 June 2004 Sylvain Pion
- Add dummy symbol in src/Interval_arithmetic.C to remove warning from
  VC++ linker.

21 June 2004 Sylvain Pion
- Add Kernel_profiler.
- Add predicates used by convex_hull_2.

21 June 2004 Sylvain Pion
- Improve static filters for 2D predicates.

20 June 2004 Sylvain Pion
- Merge Static_filters into Filtered_kernel.
- Static_filter_error : add ulp() function for new filters.
- Static_filter::Orientation_3 : improve filter.
- Static_filter::Side_of_orientes_sphere_3 : improve filter.

20 June 2004 Sylvain Pion
- Don't assume coordinates are doubles, call to_double().

20 June 2004 Sylvain Pion
- Rewrite of Static_filters and its test-suite in preparation for the merge.

20 June 2004 Sylvain Pion
- Put diff_was_exact() in a separate file.

20 June 2004 Sylvain Pion
- Use CGAL_NTS instead of CGAL::.

13 June 2004 Sylvain Pion
- Remove purely static code from Static_filters.
  It's pure overhead for now : requires users' intervention, with expected low
  gain, and is in the way for proper integration.  If it will have to be
  re-added one day, it should probably be in an different place.

5 June 2004 Sylvain Pion